# ftdi_libMPSSE

./: .gitignore  CMakeLists.txt  README.md
example/SPI/: CMakeLists.txt  sample_spi.c
inc/linux/: ftd2xx.h
